# Academic-Copilot

./: .env.example  .gitignore  README.md  chunker.py  embeddings.py  generator.py  ingestion.py  parser.py  pyproject.toml  query.py
app/: main.py  schemas.py
app/rag/: augmenter.py  generator.py  ingestion.py  parser.py
